# turbo-vec

./: Cargo.toml  LICENSE  README.md  outline.md
src/: error.rs  lib.rs  types.rs
src/index/: flat.rs  hnsw.rs  ivf.rs  mod.rs
src/quant/: codebook.rs  mod.rs  mse.rs  packed.rs  prod.rs
src/simd/: avx2.rs  mod.rs  portable.rs
